crates/ark-lsp-core/src/lsp/snapshots/ark_lsp_core__lsp__statement_range__tests__statement_range_serde_json_rejection-2.snap
---
source: crates/ark-lsp-core/src/lsp/statement_range.rs
assertion_line: 2678
expression: "serde_json::to_string_pretty(&rejection).unwrap()"
---
{
  "kind": "rejection",
  "rejectionKind": "syntax",
  "line": 12
}
