crates/ark-lsp-core/src/lsp/snapshots/ark_lsp_core__lsp__statement_range__tests__statement_range_serde_json_success-2.snap
---
source: crates/ark-lsp-core/src/lsp/statement_range.rs
assertion_line: 2663
expression: "serde_json::to_string_pretty(&success).unwrap()"
---
{
  "kind": "success",
  "range": {
    "start": {
      "line": 5,
      "character": 3
    },
    "end": {
      "line": 6,
      "character": 4
    }
  },
  "code": "1 + 1"
}
